# MAI_OOP_labs

./: CMakeLists.txt
lab1/: CMakeLists.txt  main.cpp
lab1/include/: hight.hpp
lab1/src/: hight.cpp
lab1/tests/: CMakeLists.txt  test.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: Octal.hpp
lab2/src/: Octal.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Array.hpp  Figure.hpp  Rectangle.hpp  Square.hpp  Triangle.hpp
lab3/src/: Array.cpp  Figure.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Array.hpp  Figure.hpp  Rectangle.hpp  Square.hpp  Triangle.hpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: allocator.hpp  stack.hpp
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  test.cpp
