cmake_minimum_required(VERSION 3.20)

project(OS_LABS C CXX)

enable_testing()

if (MSVC)
    add_compile_options(/W4 /WX)
else()
    # add_compile_options(-Wall -Wextra -pedantic -Werror)
endif()

include(FindThreads)

#add LAB1
add_subdirectory(lab1)

#add LAB2
add_subdirectory(lab2)

#add LAB5
add_subdirectory(lab5)

add_subdirectory(tests)